<resources>
    <string name="app_name">calculator</string>
    <string name="_7">7</string>
    <string name="delete">DELETE</string>
    <string name="dot">.</string>
    <string name="plus">+</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="equal">=</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_4">4</string>
    <string name="sub">-</string>
    <string name="_5">5</string>
    <string name="error_warning">invalid format!</string>
    <string name="error">Error</string>
</resources>