<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        tools:visibility="visible">

        <EditText
            android:id="@+id/txt_screen"
            android:layout_width="match_parent"
            android:layout_height="117dp"
            android:background="#F39E83"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/delete_bar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="0dp"
        android:background="#E91E63"
        android:gravity="right"
        android:orientation="horizontal"
        tools:visibility="visible">

        <Button
            android:id="@+id/delete"
            android:layout_width="95dp"
            android:layout_height="55dp"
            android:text="@string/delete"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginTop="0dp"
        android:background="#8BC34A"
        android:gravity="center"
        android:orientation="horizontal"
        tools:visibility="visible">

        <Button
            android:id="@+id/btn7"
            android:layout_width="95dp"
            android:layout_height="85dp"
            android:text="@string/_7"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="95dp"
            android:layout_height="85dp"
            android:text="@string/_8"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="95dp"
            android:layout_height="85dp"
            android:text="@string/_9"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/div"
            android:layout_width="95dp"
            android:layout_height="85dp"
            android:gravity="center"
            android:src="@drawable/ic_div_name"
            android:tint="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginTop="0dp"
        android:background="#FFC107"
        android:gravity="center"
        android:orientation="horizontal"
        tools:visibility="visible">

        <Button
            android:id="@+id/btn4"
            android:layout_width="95dp"
            android:layout_height="85dp"
            android:text="@string/_4"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="95dp"
            android:layout_height="85dp"
            android:text="@string/_5"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="95dp"
            android:layout_height="85dp"
            android:text="@string/_6"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/mul"
            android:layout_width="95dp"
            android:layout_height="85dp"
            android:src="@drawable/ic_mul_name"
            android:textSize="30sp"
            android:textStyle="bold"
            android:tint="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginTop="0dp"
        android:background="#00BCD4"
        android:gravity="center"
        android:orientation="horizontal"
        tools:visibility="visible">

        <Button
            android:id="@+id/btn1"
            android:layout_width="95dp"
            android:layout_height="85dp"
            android:text="@string/_1"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="95dp"
            android:layout_height="85dp"
            android:text="@string/_2"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="95dp"
            android:layout_height="85dp"
            android:text="@string/_3"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_sub"
            android:layout_width="95dp"
            android:layout_height="85dp"
            android:text="@string/sub"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginTop="0dp"
        android:background="#9C27B0"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_dot"
            android:layout_width="95dp"
            android:layout_height="85dp"
            android:text="@string/dot"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="95dp"
            android:layout_height="85dp"
            android:text="@string/_0"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_equal"
            android:layout_width="95dp"
            android:layout_height="85dp"
            android:text="@string/equal"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="95dp"
            android:layout_height="85dp"
            android:text="@string/plus"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>